--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-shooter"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Shishir Tandale <shishir@tandale.com>"]
 edition = "2018"
 
@@ -12,4 +12,6 @@ rand = "0.7.0"
 rand_distr = "0.2.2"
 nalgebra = "0.18"
 trees = "0.2.1"
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 uuid = { version = "0.7", features = ["serde", "v4"] }
